# Asterix

./: .gitignore  Cargo.toml  github  github.pub  sshgit  sshgit.pub
src/: lib.rs  main.rs  matrix.rs
