[package]
name = "astoria_ml"
version = "0.1.11"
authors = ["Astoria"]
edition = "2021"
rust-version = "1.80.1"
description = "Machine learning algorithms, made from the ground up with linear algebra and matrix manipulation, with a focus on genetic iteration for machine learning"
repository = "https://github.com/Apoxtrophe/Asterix"
keywords = ["rust", "example", "machine-learning"]
categories = ["science", "data-structures", "algorithms"]
documentation = "https://docs.rs/astoria_ml"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.5"
rand_distr = { version = "0.5.0-alpha.3" }
nalgebra = "0.33.0"
termion = "4.0.2"
rayon = "1.10.0"